fix the collapse state storage bug

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -157,3 +157,14 @@ animation: slideIn 0.5s ease-in-out;
     width: auto;
 }
 
+.avatar {
+    border-radius: 30px;
+    width: 40px;
+    height: 40px;
+}
+
+.avatar img {
+    border-radius: inherit;
+    width: inherit;
+    height: inherit;
+}
